哎，把主题都去掉了。。。默认主题就material主题

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1,3 +1,4 @@
+@require './colors.styl'
 @require './variable.styl'
 @require './mixin.styl'
 
@@ -24,3 +25,7 @@
 
 .{$-melon-variant-prefix}-size-xxxl
     font-size $-melon-xxx-large-font-size !important
+
+.{$-melon-variant-prefix}-fluid
+    display: block !important
+    width: 100% !important
