--- a/src/css/mixin.styl
+++ b/src/css/mixin.styl
@@ -13,3 +13,6 @@ melon-clearfix()
         clear both
         content ""
 
+melon-get-z-depth($level = '0')
+    $shadow = $-melon-z-depth[$level]
+    return $shadow ? unquote($shadow) : none
