--- a/example/common/css/index.styl
+++ b/example/common/css/index.styl
@@ -4,8 +4,11 @@ global-reset()
 
 body
     font-size: 16px
-    padding-left: 210px
     font-family: 'Helvetica Neue', Helvetica, 'Microsoft YaHei', Arial, '宋体', SimSun, sans-serif
+
+#app
+    margin-left 200px
+    padding 0 10px
 
 .nav
     fixed: top left bottom
