--- a/src/css/Title.styl
+++ b/src/css/Title.styl
@@ -1,5 +1,21 @@
 @import "./base.styl"
 
+$-melon-title = {
+    margin: 0.5em 0 0.4em
+    line-height: 110%
+}
+
+$-melon-title-levels = {
+
+    '1': 4.2,
+    '2': 3.5,
+    '3': 2.9,
+    '4': 2.2,
+    '5': 1.6,
+    '6': 1
+
+}
+
 .{$-melon-class-prefix}-title
     {$-melon-title}
 
