--- a/example/Button.styl
+++ b/example/Button.styl
@@ -3,9 +3,7 @@
 @require '../src/css/ButtonGroup.styl'
 
 .row
-
-    margin-left: -15px;
-    padding 10px 0
+    margin-left: -15px
 
     button
         margin-left 15px;
