--- a/example/common/css/index.styl
+++ b/example/common/css/index.styl
@@ -41,3 +41,6 @@ body
             &:hover
                 background-color #1b1c1d + 10%
                 color: #fff
+
+.row
+    padding: 10px 0
