--- a/src/css/Pager.styl
+++ b/src/css/Pager.styl
@@ -15,7 +15,9 @@ $-melon-pager-ul = {
     // Gets rid of tap active state
     -webkit-tap-highlight-color: transparent
 
+    font-size: 18px
 }
+
 
 $-melon-pager-item = {
 
@@ -41,6 +43,11 @@ $-melon-pager-item = {
     // Gets rid of tap active state
     -webkit-tap-highlight-color: transparent
 
+    -webkit-transition: background-color 0.6s ease-in-out
+    -moz-transition: background-color 0.6s ease-in-out
+    -o-transition: background-color 0.6s ease-in-out
+    transition: background-color 0.6s ease-in-out
+
 }
 
 $-melon-pager-states = {
@@ -58,14 +65,44 @@ $-melon-pager-states = {
 
     prev: {
         width: auto
+        font-size: 1.5em
+        -webkit-transition: none
+        -moz-transition: none
+        -o-transition: none
+        transition: none
+
+        '&:hover': {
+            background-color: transparent
+            border-radius: 0
+        }
     },
 
     next: {
         width: auto
+        font-size: 1.5em
+        -webkit-transition: none
+        -moz-transition: none
+        -o-transition: none
+        transition: none
+
+        '&:hover': {
+            background-color: transparent
+            border-radius: 0
+        }
     },
 
     ellipsis: {
         width: auto
+        font-size: 1.2em
+        -webkit-transition: none
+        -moz-transition: none
+        -o-transition: none
+        transition: none
+
+        '&:hover': {
+            background-color: transparent
+            border-radius: 0
+        }
     }
 }
 
@@ -80,15 +117,19 @@ $-melon-pager-states = {
 
         {$-melon-pager-item}
 
+        &:hover
+            background-color: $-melon-colors.cyan300
+            border-radius: 2px
+
         for $state, $hashes in $-melon-pager-states
             &.state-{$state}
                 {$hashes}
 
         a
-            text-decoration: none;
+            text-decoration: none
 
-            &:link,
-            &:active,
+            &:link
+            &:active
             &:hover
                 text-decoration: none
                 color: inherit
