--- a/src/css/Pager.styl
+++ b/src/css/Pager.styl
@@ -61,6 +61,11 @@ $-melon-pager-states = {
     disabled: {
         cursor: default
         color: $-melon-colors.lightBlack
+
+        '&:hover': {
+            background-color: transparent
+            border-radius: 0
+        }
     },
 
     current: {
