--- a/src/css/Pager.styl
+++ b/src/css/Pager.styl
@@ -26,7 +26,7 @@ $-melon-pager = {
     // Gets rid of tap active state
     -webkit-tap-highlight-color: transparent
 
-    font-size: 18px
+    font-size: $-melon-medium-font-size
 }
 
 
