--- a/example/BoxGroup.styl
+++ b/example/BoxGroup.styl
@@ -2,7 +2,7 @@
 @require '../src/css/BoxGroup.styl'
 @require '../src/css/Button.styl'
 @require '../src/css/Icon.styl'
-
+@require '../src/css/Toggle.styl'
 
 .row p
     margin: 10px 0
