--- a/src/css/BoxGroup.styl
+++ b/src/css/BoxGroup.styl
@@ -79,6 +79,8 @@ $-melon-checkbox-icon = {
 
     &.state-disabled
 
+        cursor: not-allowed
+
         .{$-melon-class-prefix}-icon
 
             color: $-melon-colors.lightBlack
