--- a/src/css/Tabs.styl
+++ b/src/css/Tabs.styl
@@ -73,8 +73,10 @@ $-melon-tabinkbar = {
 
         color: $-melon-colors.lightWhite
 
+        cursor: not-allowed
 
-.{$-melon-class-prefix}-tabpanel
+
+.{$-melon-class-prefix}-tab-panel
 
     display: none;
 
@@ -84,7 +86,7 @@ $-melon-tabinkbar = {
 
 
 
-.{$-melon-class-prefix}-tabinkbar
+.{$-melon-class-prefix}-tab-inkbar
 
     {$-melon-tabinkbar}
 
