--- a/src/css/Toggle.styl
+++ b/src/css/Toggle.styl
@@ -57,6 +57,8 @@ $-melon-toggle-bar-container = {
 
     &.state-disabled
 
+        cursor: not-allowed
+
         .{$-melon-class-prefix}-toggle-circle
             background-color: $-melon-colors.grey400
 
