--- a/src/css/Table.styl
+++ b/src/css/Table.styl
@@ -6,7 +6,7 @@
     border-radius: 2px
     border: 1px solid $-melon-colors.grey400
 
-    &-row
+    &row
         width: 100%
         border-top: 1px solid $-melon-colors.grey400
 
@@ -14,7 +14,7 @@
             .{$-melon-variant-prefix}-table-selector
                 color: $-melon-colors.blue500
 
-    &-header &-row
+    &-header &row
         height: 56px
         border-top: 0
         td
@@ -26,11 +26,11 @@
         text-overflow: ellipsis
         overflow: hidden
 
-    &-header &-row,
-    &-footer &-row
+    &-header &row,
+    &-footer &row
         color: rgba($-melon-colors.black, .54)
 
-    &-body &-row
+    &-body &row
 
         &.state-selected
             background-color: $-melon-colors.grey100
@@ -38,7 +38,7 @@
         &:hover
             background-color: $-melon-colors.grey200
 
-    &-cell
+    &cell
         display: inline-block
         vertical-align: top
         font-size: $-melon-x-small-font-size
