--- a/src/css/variable.styl
+++ b/src/css/variable.styl
@@ -26,3 +26,8 @@ $-melon-z-depth = {
     '4': '0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21)',
     '5': '0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22)'
 };
+
+$-melon-z-index = {
+    dialog: 10
+};
+
