添加Table，暂不支持行内编辑

--- a/src/css/Table.styl
+++ b/src/css/Table.styl
@@ -59,13 +59,12 @@
         &-content
             padding: 8px
 
-
-
     .{$-melon-variant-prefix}-table-selector
-        display: block
         width: 24px
-        margin: 0 auto
         font-size: 24px
         color: $-melon-colors.grey700
         cursor: pointer
         transition: color .5s
+
+        &.state-selected
+            color: $-melon-colors.blue500
