--- a/example/common/css/index.styl
+++ b/example/common/css/index.styl
@@ -1,10 +1,18 @@
 @require 'nib'
+@require '../../../src/css/mixin.styl'
 
 global-reset()
 
 body
     font-size: 16px
     font-family: 'Helvetica Neue', Helvetica, 'Microsoft YaHei', Arial, '宋体', SimSun, sans-serif
+
+html,
+body
+    width: 100%
+    height: 100%
+
+melon-generate-grid()
 
 #app
     margin-left 200px
@@ -14,8 +22,8 @@ body
     fixed: top left bottom
     width: 200px
     background: #1b1c1d
-    text-align right
-
+    text-align: right
+    overflow-y: auto
 
     > h1
         height: 2em
