--- a/src/css/mixin.styl
+++ b/src/css/mixin.styl
@@ -16,3 +16,23 @@ melon-clearfix()
 melon-get-z-depth($level = '0')
     $shadow = $-melon-z-depth[$level]
     return $shadow ? unquote($shadow) : none
+
+melon-generate-grid($columns = 12, $gap = 0.3)
+
+    $single-width = (1 / $columns)
+    $single-column-width = $single-width * 1 / ( 1 + $gap )
+    $gap-width = $single-width * $gap / ( 1 + $gap )
+
+    .melon-row
+        margin-left: unit(-1 * $gap-width * 100, '%')
+        clearfix()
+
+    .melon-column
+        float: left
+        margin-left: unit($gap-width * 100, '%') !important
+
+    for $i in (1..$columns)
+        .melon-column-{$i}
+            width: unit(($i * $single-width - $gap-width) * 100, '%') !important
+
+
