添加一个默认的melon字体设置

--- a/src/css/variable.styl
+++ b/src/css/variable.styl
@@ -9,7 +9,7 @@ $-melon-xx-large-font-size = ($-melon-medium-font-size * 1.375) // 22
 $-melon-xxx-large-font-size = ($-melon-medium-font-size * 1.5) // 24
 $-melon-xxxx-large-font-size = ($-melon-medium-font-size * 2.25) // 36
 
-$-melon-font-family = 'Helvetica Neue', Helvetica, Arial, '宋体', SimSun, sans-serif;
+$-melon-font-family = 'Helvetica Neue' Helvetica 'Microsoft YaHei' Arial SimSun sans-serif;
 
 // global transition switch
 $-melon-enable-transition-effect = true
