重构TextBox，添加了controlled模式

--- a/example/TextBox.styl
+++ b/example/TextBox.styl
@@ -2,9 +2,5 @@
 @require '../src/css/Title.styl'
 @require '../src/css/TextBox.styl'
 
-.row
-
-    margin-left -10px
-
-    .ui-textbox
-        margin-left 10px
+.melon-row
+    margin: 2em 0
