重构Switches，添加Controlled功能

--- a/src/css/BoxGroup.styl
+++ b/src/css/BoxGroup.styl
@@ -9,6 +9,7 @@
         display: block
         line-height: 2em
         color: rgba($-melon-colors.black, .54)
+        cursor: pointer
 
         > input
             display: none
@@ -29,3 +30,4 @@
 
         &.state-disabled
             color: rgba($-melon-colors.black, .26)
+            cursor: not-allowed
