--- a/src/css/Dialog.styl
+++ b/src/css/Dialog.styl
@@ -8,32 +8,29 @@
     -webkit-tap-highlight-color: $-melon-colors.transparent
     z-index: $-melon-z-index.dialog
     top: 0
-    left: -10000px
     width: 100%
     height: 100%
     overflow: hidden
+    left: -10000px;
+    opacity: 0
+    transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms
 
     &.state-open
 
-        left: 0
-        overflow: auto
-
-    &.state-open &-window
-
         opacity: 1
+        overflow: auto
 
     &-window
 
         box-sizing: border-box
         -webkit-tap-highlight-color: $-melon-colors.transparent
-        transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, top 250ms cubic-bezier(0.23, 1, 0.32, 1) 0ms
+        transition: top 250ms cubic-bezier(0.23, 1, 0.32, 1) 0ms
         position: absolute
         width: 75%
         max-width: 768px
         top: 16px
         left: 50%
         z-index: $-melon-z-index.dialog
-        opacity: 0
         background-color: $-melon-colors.white
         box-shadow: 0 14px 45px rgba(0, 0, 0, 0.25), 0 10px 18px rgba(0, 0, 0, 0.22)
         border-radius: 2px
