基于 es6 class 重构

--- a/src/css/BoxGroup.styl
+++ b/src/css/BoxGroup.styl
@@ -5,7 +5,7 @@
     display: inline-block
     width: 100%
 
-    &-option
+    &option
         display: block
         line-height: 2em
         color: rgba($-melon-colors.black, .54)
