--- a/src/css/Table.styl
+++ b/src/css/Table.styl
@@ -20,8 +20,8 @@
         td
             font-size: $-melon-xx-small-font-size
 
-    &-header &-cell &-cell-content,
-    &-footer &-cell &-cell-content
+    &-header &cell &cell-content,
+    &-footer &cell &cell-content
         white-space: nowrap
         text-overflow: ellipsis
         overflow: hidden
