--- a/src/css/Select.styl
+++ b/src/css/Select.styl
@@ -79,3 +79,6 @@
             cursor: not-allowed
             &:hover
                 background-color: $-melon-colors.white
+
+    &.state-invalid
+        border-bottom-color: $-melon-colors.red500
