--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -5,6 +5,9 @@
 .{$-melon-state-prefix}-hidden
     display none !important
 
+.{$-melon-variant-prefix}-size-xxs
+    font-size $-melon-xx-small-font-size !important
+
 .{$-melon-variant-prefix}-size-xs
     font-size $-melon-x-small-font-size !important
 
