--- a/src/css/Tree.styl
+++ b/src/css/Tree.styl
@@ -63,7 +63,7 @@ $-melon-treenode = {
         transition: all .3s ease 0s
         height: 0
 
-        &.state-open
+        &.state-expand
 
             height: auto
             overflow: auto
