progress的样式修改，treenode点击控制

--- a/src/css/Progress.styl
+++ b/src/css/Progress.styl
@@ -15,9 +15,8 @@ $-melon-progress-linear = {
 $-melon-progress-circle = {
     position: relative
     display: inline-block
-    margin: 0.5em
-    width: 2.333em
-    height: 2.333em
+    width: 2em
+    height: 2em
     font-size: $-melon-medium-font-size
 }
 
@@ -62,16 +61,15 @@ $-melon-progress-circle = {
 
         &-wapper
 
-            width: 37px
-            height: 37px
-            margin: 0.3125em
+            width: 100%
+            height: 100%
             display: inline-block
             transition: 20s transform linear 0ms
 
         &-svg
 
-            width: 37px
-            height: 37px
+            width: 100%
+            height: 100%
             position: relative
 
         &-path
