--- a/example/Form.styl
+++ b/example/Form.styl
@@ -5,6 +5,7 @@
 @require '../src/css/BoxGroup.styl'
 @require '../src/css/Toggle.styl'
 @require '../src/css/Validity.styl'
+@require '../src/css/Calendar.styl'
 
 .row
     margin-left: -15px
