--- a/example/Button.styl
+++ b/example/Button.styl
@@ -1,9 +1,12 @@
 @require '../src/css/Title.styl'
 @require '../src/css/Button.styl'
 @require '../src/css/ButtonGroup.styl'
+@require '../src/css/Icon.styl'
 
-.row
-    margin-left: -15px
+.melon-row
+    margin: 20px 0
 
-    button
-        margin-left 15px;
+.melon-column
+
+    > .ui-button + .ui-button
+        margin-left: 1em
