--- a/src/css/Button.styl
+++ b/src/css/Button.styl
@@ -181,3 +181,7 @@ $-melon-button-variants = {
             display: inline-block
             margin-left: 0.5em
             vertical-align: top
+
+    &.variant-icon
+        padding: 0
+        min-width: 2em
