--- a/src/css/SnackBar.styl
+++ b/src/css/SnackBar.styl
@@ -58,7 +58,7 @@ $-melon-snackbar-variants = {
 }
 
 
-.{$-melon-class-prefix}-snackbar
+.{$-melon-class-prefix}-snack-bar
     color: $-melon-colors.white
     border-radius: 2px
     padding: 0 24px
