如果Button有唯一的子组件且是子组件Icon时，会自动添加variant-icon 调整了浮层的z-index

--- a/example/index.styl
+++ b/example/index.styl
@@ -54,11 +54,13 @@ melon-generate-grid()
     padding: 10px 0
 
 @import '../src/css/theme/default'
+@import '../src/css/Card.styl'
 @require 'BoxGroup.styl'
 @require 'Breadcrumb.styl'
 @require 'Button.styl'
 @require 'Calendar.styl'
 @require 'Dialog.styl'
+@require 'Drawer.styl'
 @require 'Form.styl'
 @require 'Grid.styl'
 @require 'Icon.styl'
