--- a/src/main.styl
+++ b/src/main.styl
@@ -15,7 +15,7 @@ html, body
     min-width: 1024px
     background-color: $-melon-colors.grey50
     font-size: 16px
-    font-family: 'Helvetica Neue', 'Hiragino Sans GB', 'Microsoft YaHei', Arial;
+    font-family: 'Roboto', 'Helvetica Neue', 'Hiragino Sans GB', 'Microsoft YaHei', Arial;
     color: $-melon-colors.darkBlack
 
 a
