添加Progress Pager示例；使用ei的Page和createAppComponent

--- a/src/common/css/ZippyNav.styl
+++ b/src/common/css/ZippyNav.styl
@@ -11,10 +11,11 @@
         line-height: 3.5
 
     .ui-link
-        height: 2em
-        line-height: 2
+        height: 2.5em
+        line-height: 2.5
         padding-left: 30px
         width: 270px
+        display: block
 
         &.state-active
             color: $-melon-link.states.hover.color
