--- a/src/components/css/component.styl
+++ b/src/components/css/component.styl
@@ -29,19 +29,8 @@
             right: 25px
             color: $-melon-colors.white
 
-.ui-example-card
-        padding-bottom: 1em
+.ui-example
+    margin-bottom: 50px
 
-    &-main
-        margin: 1em
-        margin-bottom: 0
-        border: 1px solid #f0f0f0
-
-    .variant-Tabs
-        .ui-tabs-panel
-            min-height: 200px
-            padding: 1em
-            line-height: 1.5em
-
-            .ui-title
-                color: $-melon-colors.black
+    &-brief
+        line-height: 2em
