添加 SnackBar Drawer

--- a/src/components/css/ExampleCard.styl
+++ b/src/components/css/ExampleCard.styl
@@ -1,14 +1,13 @@
 
 
 .ui-example-card
-        padding-bottom: 1em
+    padding-bottom: 1em
 
     &-main
-        margin: 1em
-        margin-bottom: 0
-        border: 1px solid #f0f0f0
+        padding: 30px 50px
 
     .variant-tabs
+        padding: 0
         .ui-tabs-panel
             min-height: 200px
             padding: 1em
@@ -19,11 +18,5 @@
 
     .variant-pager1,
     .variant-pager2
-        padding: 30px 50px
-
         p
             margin-top: 30px
-
-    .variant-progresslinear,
-    .variant-progresscircle
-        padding: 30px 50px
