--- a/src/components/css/ExampleCard.styl
+++ b/src/components/css/ExampleCard.styl
@@ -20,3 +20,9 @@
     .variant-pager2
         p
             margin-top: 30px
+
+    .melon-row
+        margin-bottom: 20px
+
+        &:last-child
+            margin-bottom: 0
