--- a/src/components/css/ExampleCard.styl
+++ b/src/components/css/ExampleCard.styl
@@ -6,6 +6,17 @@
     &-main
         padding: 30px 50px
 
+    .variant-button
+        padding: 0
+        .ui-tabs-panel
+            padding: 1em
+        .melon-column
+            text-align: center
+
+    .variant-buttonsize
+        .ui-button
+            margin-right: 15px
+
     .variant-tabs
         padding: 0
         .ui-tabs-panel
