--- a/example/index.styl
+++ b/example/index.styl
@@ -68,6 +68,8 @@ melon-generate-grid()
 @require 'Table.styl'
 @require 'Tabs.styl'
 @require 'TextBox.styl'
+@require 'TimePicker.styl'
 @require 'Tooltip.styl'
 @require 'Tree.styl'
 @require 'Uploader.styl'
+
