--- a/example/index.styl
+++ b/example/index.styl
@@ -72,4 +72,5 @@ melon-generate-grid()
 @require 'Tooltip.styl'
 @require 'Tree.styl'
 @require 'Uploader.styl'
+@require '../src/css/Slider.styl'
 
