--- a/example/index.styl
+++ b/example/index.styl
@@ -48,8 +48,8 @@ melon-generate-grid()
 .row
     padding: 10px 0
 
-@import '../src/css/theme/default'
-@import '../src/css/Card.styl'
+@require '../src/css/theme/default'
+@require '../src/css/Card.styl'
 @require 'BoxGroup.styl'
 @require 'Breadcrumb.styl'
 @require 'Button.styl'
