修改Zippy的实现，改为用css来实现动画，如果设定了宽高才会出现动画

--- a/example/index.styl
+++ b/example/index.styl
@@ -92,3 +92,4 @@ melon-generate-grid()
 @require 'Tree.styl'
 @require 'Uploader.styl'
 @require '../src/css/Slider.styl'
+@require '../src/css/Zippy.styl'
