添加百度统计；修改icon；添加安装方法

--- a/src/home/css/home.styl
+++ b/src/home/css/home.styl
@@ -28,6 +28,22 @@
         .ui-button
             margin-top: 40px
 
+    &-install
+        margin: 0 auto
+        min-width: 600px
+        text-align: center
+        background-color: $-melon-colors.blueGrey50
+
+        .ui-title
+            display: inline-block
+            width: 120px
+        div
+            display: inline-block
+            width: 420px
+            background-color: $-melon-colors.blueGrey100
+            line-height: 44px
+            height: 44px
+
     &-info
 
         padding: 48px 24px
